<resources>
    <string name="app_name">Shopping Trip</string>
    <string name="add_item_to_list">Add item</string>
    <string name="cancelmenu">Cancel</string>
    <string name="settings">Settings</string>
    <string name="remove_item_menu">Delete items</string>
    <string name="showStores">Recommend trip </string>
    <string name="clear_checked">Clear acquired</string>
    <string name="delete_allmenu">Delete all</string>
    <string name="insertproductname">Product name</string>
    <string name="insertstorename">Store name</string>
    <string name="addmessage">Add an item to the list:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="invalidproddescr">Please input valid values.</string>
    <string name="prodinlist">Sorry, that product is already in the list.</string>
    <string name="remove_item">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="confirm_delete">Are you sure? This will clear the whole list.</string>
    <string name="remove">Remove</string>
    <string name="clear_list">Clear list</string>
    <string name="include_quantity">Include quantity</string>
    <string name="uncheck_title">Move item</string>
    <string name="uncheck">Do you want to move the product back
        to the pending items list?</string>
    <string name="proceed">Move it</string>
    <string name="price">Price: $</string>
    <string name="zerozero">00</string>
    <string name="savepricetitle">Save purchase details</string>
    <string name="savepriceok">Save</string>
    <string name="per">per</string>
    <string name="acquiredfor">| Acquired at </string>
    <string name="notavailable">| Purchase details not stored.</string>
    <string name="nothinghere">There doesn\'t seem to be anything here :(</string>
    <string name="savepricecancel">Don\'t save</string>
    <string name="separator_pending">ITEMS TO BUY</string>
    <string name="separator_acquired">ITEMS ACQUIRED</string>

</resources>
