<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add"
        android:title="@string/add_item_to_list"
        android:icon="@drawable/plus_100"
        android:onClick="showNewItem"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete"
        android:title="@string/remove_item_menu"
        android:onClick="showDelete"
        android:icon="@drawable/minus_100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_delete_all"
        android:title="@string/delete_allmenu"
        android:onClick="deleteAll"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_clear_all_checked"
        android:title="@string/clear_checked"
        android:onClick="clearChecked"
        android:visible="false"
        />
    <item android:id="@+id/action_cancel"
        android:title="@string/cancelmenu"
        android:onClick="cancelDelete"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_best_stores"
        android:title="@string/showStores"
        android:onClick="showHideStores"
        android:enabled="true"
        android:checkable="true"
        app:showAsAction="never"
        />

</menu>